# solana-state-ext-program

./: README.md
program/: Cargo.toml
program/src/: entrypoint.rs
program/src/instruction/: initialize_with_ext_life_cycle.rs  mod.rs
program/src/state/: my_state.rs  utils.rs
program/tests/: unit_tests.rs
