[package]
name = "solana-state-ext-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
solana-state-extensions = { git = "https://github.com/Nagaprasadvr/solana-state-extensions", branch = "main" }
shank = "0.4.2"

[dev-dependencies]
solana-sdk = "2.2.1"
litesvm = "0.6.1"
solana-hash = "2.2.1"
solana-keypair = "2.2.1"
solana-transaction = "2.2.1"


[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
bench-default = ["no-entrypoint", "std"]


[[test]]
name = "unit_tests"
